--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </div>
   </section>
   <div>
-  <p class="h1 text-center" style="color:whitesmoke ; font-size:32px; height: 80px; line-height:180px;"> ┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉ 相 關 網 站 ┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉</div>
+  <p class="h1 text-center" style="color:whitesmoke ; font-size:32px; height: 100%; line-height:180px;"> ┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉ 相 關 網 站 ┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉</div>
   </div>
     <!-- 第二個區塊介紹 -->
   <div class="container d-flex  justify-content-center ">
@@ -280,7 +280,7 @@
            >
     </div>
   </div>
-  <p class="h1 text-center" style="color:whitesmoke ; font-size:32px; height:100%"> ┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉</div>
+  <p class="h1 text-center" style="color:whitesmoke ; font-size:32px; height:100%"> ┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉┉</div>
   <!-- 第四個區塊email -->
   <div class="container mt-5">
     <!-- <div class="row">
